style.css
body {
  margin: 0;
  font-family: Arial, sans-serif;
  background-color: #f3f4f7;
  color: #000000;
  transition: 0.3s;
  height: 1000px;
  padding: 20px;
}

.container {
  display: flex;
}

/* Sidebar */
.sidebar {
  width: 220px;
  height: 100vh;
  background:  rgb(63, 81, 119);
  color: #fff;
  position: fixed;
  left: 0;
  top: 0;
  padding: 20px 15px;
}


.sidebar h2 {
  text-align: center;
  margin-bottom: 30px;
  font-size: 22px;
  letter-spacing: 1px;
}

.sidebar ul {
  list-style: none;
}

.sidebar ul li {
  margin: 15px 0;
}

.sidebar ul li a {
  display: flex;
  align-items: center;
  gap: 15px;
  color: #ccc;
  text-decoration: none;
  padding: 10px;
  border-radius: 8px;
  transition: 0.3s;
}

.sidebar ul li a i {
  font-size: 18px;
}

.sidebar ul li a p {
  margin: 0;
  font-size: 15px;
}

.sidebar ul li a:hover {
  background: #c7d0ea;
  color: #151515;
}

.sidebar ul li a.active {
  background: #4e73df;
  color: #fff;
}

.main-home {
  margin-left: 240px;
  padding: 40px;
  width: calc(100% - 240px);
  flex-direction: column; 
  /* display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
  gap: 20px;
}

/* btn page */

/* Main */
.main1 {
  margin-left: 240px;
  padding: 40px;
  width: calc(100% - 240px);
  flex-direction: column; 
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 20px;
}

/* Header */
.page-header {
  grid-column: 1 / -1;
}

.page-header p {
  color: #6c69a5;
}

.component-card {
  /* background: #b4c2e5; */
  padding: 20px;
  border-radius: 16px;
  border: 1px solid #eee;
  display: flex;
  flex-direction: column;
  gap: 15px;
  transition: all 0.3s ease;
}

.component-card:hover {
  background: #b4c2e5;
  transform: translateY(-8px);
  box-shadow: 0 20px 40px rgba(239, 12, 12, 0.08);
}

.component-card button:first-of-type {
  align-self: center;
  transition: all 0.25s ease;
}

.component-card button:first-of-type:hover {
  transform: scale(1.05);
}

.nav-btn button {
  padding: 6px 14px;
  border: none;
  background: #5d76ab;
  color: white;
  border-radius: 6px;
  cursor: pointer;
  transition: 0.2s;
}

.nav-btn button:hover {
  background: #0b1a3e;
}
/* responsive-navbarpage */
@media (max-width: 768px) {

  nav {
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;
  }

  .nav-links {
    flex-direction: column;
    width: 100%;
    display: none;
  }

  .nav-links a {
    padding: 8px 0;
    width: 100%;
  }

}

@media (max-width: 425px) {

  .nav-links a {
    font-size: 13px;
  }

  .nav-btn button {
    width: 100%;
  }
}

/* Actions */
 .actions {
  display: flex;
  gap: 10px;
}

.actions button:hover {
  background: #333;
}

.actions button {
  flex: 1;
  padding: 10px;
  border: none;
  background: #1f1f1f;
  color: white;
  border-radius: 8px;
  cursor: pointer;
  font-size: 13px;
  transition: 0.3s;
}

.actions button:hover {
  background: #444;
  transform: translateY(-2px);
}

/* Code */
.code-block {
  display: none;
  background: #0d1117;
  color: #c9d1d9;
  padding: 12px;
  border-radius: 10px;
  font-size: 12px;
}

/* Buttons */

/* Gradient */
.gradient-btn {
  padding: 10px 20px;
  border: none;
  color: white;
  background: linear-gradient(45deg, #084a80, #6c5ce7);
  border-radius: 6px;
}

/* Outline */
.outline-btn {
  padding: 10px 20px;
  border: 2px solid #30229e;
  background: transparent;
  color: #1d1655;
  border-radius: 6px;
}

/* Neon */
.neon-btn {
  padding: 10px 20px;
  background: #7182d6;
  color: #000505;
  border: 2px solid #2a393a;
  border-radius: 6px;
}

/* Glass */
.glass-btn {
  padding: 10px 20px;
  background: rgba(255,255,255,0.2);
  backdrop-filter: blur(10px);
  border-radius: 8px;
}

/* Shadow */
.shadow-btn {
  padding: 10px 20px;
  background: #6088cc;
  color: white;
  border: none;
  border-radius: 6px;
  box-shadow: 0 5px 0 #7e70ca;
}


/* HERO */
.hero {
  background: rgb(93, 118, 171);
  padding: 40px;
  border-radius: 16px;
  margin-bottom: 30px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.hero-left {
  max-width: 60%;
}

.hero-left h1 {
  color: #1e1e2f;
  font-size: 32px;
  margin-bottom: 10px;
}

.hero-right {
  margin-top: 20px;
}
.hero-left p {
  color: #080808;
}

.btn {
  padding: 10px 60px;
  background: #3faffa6b;
  border: 0;
  outline: none;
  cursor: pointer;
  font-size: 22px;
  font-weight: 500;
  border-radius: 30px;
}

.popup {
  width: 400px;
  background: #edf4fa;
  border-radius: 6px;
  position: absolute;
  top: 0;
  left: 50%;
  transform: translate(-50%,-50%) scale(0.1);
  text-align: center;
  padding: 0 30px 30px;
  color: #333;
  visibility: hidden;
  transition: transform 0.4s, top 0.4s;
}

.open-popup {
  visibility: visible;
  top: 50%;
  transform: translate(-50%,-50%) scale(1);
}

.popup img {
  width: 100px;
  margin-top: -50px;
  border-radius: 50%;
  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
}

.popup h2 {
  font-size: 38px;
  font-weight: 500;
  margin: 30px 0 10px;
}

.popup button {
  width: 100%;
  margin-top: 50px;
  padding: 10px 0;
  background: #6fd649;
  color: #fff;
  border: 0;
  outline: none;
  border-radius: 4px;
  cursor: pointer;
  box-shadow: 0 5px 5px rgba(0,0,0,0.2);
}


/* BUTTON */
.explore-btn {
  padding: 12px 20px;
  background: linear-gradient(45deg, #7273df, #8580b0);
  color: white;
  text-decoration: none;
  border-radius: 8px;
}

/* FEATURES GRID */
.features {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
  gap: 20px;
}

/* CARDS */
.feature-card {
  background: white;
  padding: 20px;
  border-radius: 14px;
  border: 1.5px solid #8e90a9;
}

/* SEARCH BAR */
.search-bar {
  margin-bottom: 20px;
}

.search-bar input {
  width: 100%;
  padding: 12px;
  border-radius: 15px;
  border: 3px solid #ddd;
  outline: none;
}

/* FEATURED SECTION */
.featured {
  margin-bottom: 30px;
}

.featured h2 {
  margin-bottom: 15px;
}

.featured-cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
  gap: 20px;
}

/* FOOTER */
.footer {
  text-align: center;
  padding: 20px;
  color: #777;
}

/* IMPROVED HOVER */
.feature-card {
  transition: 0.3s;
}

.feature-card:hover {
  background: rgb(126, 150, 199);
  transform: translateY(-5px);
  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
} 

.search-bar input:hover {
  border-color: #605a8b;
}

#scrollTopBtn {
  position: fixed;
  bottom: 20px;
  right: 20px;
  display: none;
  padding: 10px 15px;
  font-size: 18px;
  border: none;
  background-color: rgb(16, 15, 15);
  color: rgba(249, 254, 255, 0.986);
  cursor: pointer;
  border-radius: 5px;
}


.toggle-btn {
  position: fixed;
  top: 10px;
  right: 10px;
  padding: 8px 12px;
  border: none;
  cursor: pointer;
  border-radius: 5px;
  background-color: black;
  color: white;
}

body.dark-mode .toggle-btn {
  background-color: white;
  color: rgba(30, 30, 30, 0.943);
} 

body.dark-mode .component-card,
body.dark-mode .hero,
body.dark-mode .feature-card
  {
  background: rgb(106, 131, 180);
  color: white;
  border-color: #454185;
}

body.dark-mode .search-bar input {
  background: #454141;
  color: #ffffff;
  border-color: #4f40a3;
}

body.dark-mode .page-header p,
body.dark-mode .hero-left p {
  color: #bdaeae;
}

@media (max-width: 425px) {

  .hero {
    flex-direction: column;
    padding: 15px;
    text-align: center;
  }

  .hero-left {
    max-width: 100%;
  }

  .hero-left h1 {
    font-size: 20px;
    line-height: 1.3;
  }

  .hero-left p {
    font-size: 13px;
  }

  .hero-right {
    width: 100%;
    margin-top: 15px;
  }

  .explore-btn {
    width: 100%;
    display: block;
    text-align: center;
    padding: 10px;
    font-size: 14px;
  }

  .search-bar input {
    padding: 8px;
    font-size: 14px;
  }

  .feature-card {
    padding: 12px;
  }

  .featured h2 {
    font-size: 18px;
  }

  #scrollTopBtn {
    bottom: 15px;
    right: 15px;
    font-size: 14px;
  }
}

/* contact */
.contact-center {
  height: 100vh; 
  display: flex;
  justify-content: center; 
  align-items: center;     
}

.contact-box {
  width: 350px;
  padding: 25px;
  background: rgb(183, 183, 186);
  border-radius: 12px;
  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
  text-align: center;
}

.contact-box input,
.contact-box textarea {
  width: 100%;
  margin: 10px 0;
  padding: 10px;
  border: 1px solid #4888c7;
  border-radius: 6px;
}

.contact-box button {
  margin-top: 10px;
  padding: 10px 20px;
  border: none;
  background:rgb(63, 81, 119);
  color: white;
  border-radius: 20px;
  cursor: pointer;
}

.contact-box button:hover {
  background: rgb(135, 160, 215);
}

/* fillforms */

.forms {
  display: flex;
  flex-wrap: wrap;
}

.form {
  width: 350px;
  padding: 25px;
  background: rgb(183, 183, 186);
  border-radius: 12px;
  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
  text-align: center;
}

.form input ,
.form textarea {
  width: 100%;
  margin: 10px 0;
  padding: 10px;
  border: 1px solid #4888c7;
  border-radius: 6px;
}

.form button {
  margin-top: 10px;
  padding: 10px 20px;
  border: none;
  background:rgb(63, 81, 119);
  color: white;
  border-radius: 20px;
  cursor: pointer;
}

/* fill forms */
.container2 {
  max-width: 900px;
  margin: auto;
  text-align: center;
}

.formsh1 {
  margin-bottom: 20px;
}

.form-card {
  background: white;
  padding: 20px;
  margin: 20px 0;
  border-radius: 12px;
  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.744);
  text-align: left;
}

.form-card input,
.form-card textarea,
.form-card select {
  width: 100%;
  padding: 10px;
  margin: 10px 0;
  border: 1px solid #847fbf;
  border-radius: 6px;
}

.options {
  display: flex;
  justify-content: space-between;
  font-size: 14px;
}

.form-card button {
  width: 100%;
  padding: 10px;
  border: none;
  background: rgb(63, 81, 119);
  color: white;
  border-radius: 20px;
  cursor: pointer;
  margin-top: 10px;
}

.form-card button:hover {
  background: rgb(135, 160, 215);
}

.radio-group,
.checkbox-group {
  margin: 10px 0;
}

/* badges */
.badges-page {
  max-width: 1000px;
  margin: auto;
}

.prog-1 h1 {
  text-align: center;
  margin-bottom: 30px;
}

.prog-2 h2 {
  margin-top: 30px;
  color: #333;
}

.badge-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
  gap: 20px;
  margin-top: 15px;
}

.badge {
  background: #fff;
  padding: 15px;
  border-radius: 12px;
  text-align: center;
  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
  transition: 0.3s;
}

.badge:hover {
  transform: translateY(-5px);
}

.badge img {
  width: 60px;
  margin-bottom: 10px;
}


.badge h3 {
  margin: 10px 0 5px;
}

.badge p {
  font-size: 14px;
  color: #666;
}

/* Locked Badge */
.locked {
  opacity: 0.5;
}

.locked img {
  filter: grayscale(100%);
}

 .progress progress {
  width: 100%;
  margin-top: 10px;
} 

